<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_pedido_list_productos"
        app:showAsAction="always"
        android:icon="@drawable/ic_guardar_pedido"
        android:orderInCategory="100"
        android:title="@string/list_productos" />

    <item android:id="@+id/menu_pedido_list_user"
        app:showAsAction="always"
        android:icon="@drawable/ic_list_users"
        android:orderInCategory="100"
        android:title="@string/list_users" />

    <item android:id="@+id/menu_pedido_editar_pedido"
        app:showAsAction="always"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="100"
        android:title="@string/edit_pedido" />

    <item android:id="@+id/menu_guardar_pedido"
        android:title="@string/guardar_pedido" />

    <item android:id="@+id/menu_cancelar_pedido"
        android:title="@string/cancelar_pedido" />

</menu>