<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRegistrarGCM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/options_register" />

        <Button
            android:id="@+id/btnUnregistrarGCM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/options_unregister" />

        <TextView
            android:id="@+id/display"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sincronizar_pull"
            android:id="@+id/btnSincronizarTodo"
            android:layout_gravity="center_horizontal" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sincronizar_push"
            android:id="@+id/btnSincronizarPush"
            android:layout_gravity="center_horizontal" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/conexion_a_internet"
                android:id="@+id/btnConexionInternet" />

            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/chbConexionInternet"
                android:checked="false"
                android:gravity="center"
                android:focusable="false"
                android:clickable="false" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/conexion_a_servidor"
                android:id="@+id/btnConexionServidor" />

            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/chbConexionServidor"
                android:checked="false"
                android:focusable="false"
                android:clickable="false" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
